# EvoMind-Lab

./: ._tmp_pyver.txt  README.md  pyproject.toml  run.md
agents/: __init__.py  agent.py  genome.py  memory.py
environment/: __init__.py  bandit.py  base.py  csv_market.py  market.py
evaluation/: __init__.py  metrics.py
evolution/: __init__.py  reproduction.py  selection.py
experiment/: __init__.py  analyze.py  config.py  core.py  io.py  project.py  run.py
logs/crypto_1m/20260302_105610/: analysis.txt  config.json  generations.jsonl
logs/crypto_backtest/20260302_112135/: analysis.txt  config.json  generations.jsonl
logs/crypto_llm/20260302_115515/: config.json  generations.jsonl
logs/crypto_llm/20260302_115633/: analysis.txt  config.json  generations.jsonl
logs/run_test/20260302_090831/: config.json
logs/run_test2/20260302_090846/: config.json  generations.jsonl
logs/run_test3/20260302_090929/: config.json
projects/crypto_backtest/: project.json
tests/: test_smoke.py
visualization/: __init__.py  ascii.py
