 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "evomind-lab"
 version = "0.1.0"
 description = "A time-compressed evolutionary intelligence system"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 
 [tool.setuptools]
 package-dir = {"" = "."}
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["agents*", "evolution*", "environment*", "evaluation*", "experiment*", "visualization*"]
